# seatgeek-mcp

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: copilot-instructions.md
examples/: curl-example.sh  node-example.js
src/: index.ts  server.py  server.ts
src/prompts/: index.ts
src/schemas/: eventModels.ts
src/shared/: core.ts  endpoints.ts  helpers.ts
src/tools/: __init__.py  core.py  eventFinder.ts  eventList.ts  event_finder.py  findEventRecommendations.ts  findEvents.ts  findPerformerRecommendations.ts  performerList.ts  recommendations.ts  retrieveEventVenueInformation.ts  sectionInfo.ts  shared.ts  specificRecommendations.ts  venueList.ts
test/: test-examples.js  test-server.js  test-tools.js
